@@ -1,4 +1,4 @@
-/* Copyright (C) 2001,02, 2003, 2011 Free Software Foundation, Inc.
+/* Copyright (C) 2001,02,2003,2011 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -16,13 +16,11 @@
    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
    02111-1307 USA.  */
 
+#ifdef SHARED
 #include <dl-vdso.h>
-
 
 #define VSYSCALL_ADDR_vtime	0xffffffffff600400
 
-
-#ifdef SHARED
 void *time_ifunc (void) __asm__ ("time");
 
 void *
@@ -34,7 +32,9 @@ time_ifunc (void)
   return _dl_vdso_vsym ("time", &linux26) ?: (void *) VSYSCALL_ADDR_vtime;
 }
 __asm (".type time, %gnu_indirect_function");
+
 #else
+
 # include <time.h>
 # include <sysdep.h>
 
@@ -44,6 +44,7 @@ time (time_t *t)
   INTERNAL_SYSCALL_DECL (err);
   return INTERNAL_SYSCALL (time, err, 1, t);
 }
+
 #endif
 
 strong_alias (time, __GI_time)
